# Nyx

./: .gitignore  BoardFramework.hi  BoardFramework.hs  Main.hi  Main.hs  Main.prof  MoveFramework.hi  MoveFramework.hs  Nyx.cabal  PositionEvaluation.hi  PositionEvaluation.hs  README.md  Search.hs
src/: BoardFramework.hs  Main.hs  MoveFramework.hs  PositionEvaluation.hs  Search.hs
