name:           Nyx
version:        0.1
cabal-version:  >=1.2
build-type:     Simple
author:         lykos
data-files:     
  resources/whitePawn.png
  resources/whiteQueen.png
  resources/whiteRook.png
  resources/whiteKnight.png
  resources/whiteBishop.png
  resources/whiteKing.png
  resources/blackPawn.png
  resources/blackQueen.png
  resources/blackRook.png
  resources/blackKnight.png
  resources/blackBishop.png
  resources/blackKing.png
  resources/darkWood.png
  resources/whiteWood.png
  resources/border.png

executable Nyx
  hs-source-dirs:  src
  main-is:         Main.hs
  build-depends:  base >= 4,
                  uni-htk >= 2.2.1.3,
                  split >= 0.2.3.1,
                  containers >= 0.5.8.1,
                  random >= 1.1

  ghc-options:    -O3 -threaded -Wall -fno-warn-unused-do-bind
  other-modules:   
               BoardFramework,
               Main,
               MoveFramework,
               PositionEvaluation,
               Search

